<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintContent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edt_amount"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintAmount"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:inputType="number"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edt_date"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintDate"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:inputType="date"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edt_note"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintNote"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:inputType="text"/>

    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mType"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"/>

        <RadioButton
            android:id="@+id/radio_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chi"
            android:layout_marginLeft="20dp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_chi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:layout_marginLeft="10dp"
            android:checked="false"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>